# deep-sparql

./: .gitignore  DATA.md  Dockerfile  Dockerfile.old  Makefile  README.md  datasets  pyproject.toml
configs/: data_sources.yaml  gpt2_wdsimple.yaml  llama_wdsimple.yaml  llama_wikidata.yaml  mistral_wdsimple.yaml  mistral_wikidata.yaml  server.yaml  t5.yaml  t5_lcquad.yaml  t5_wdsimple.yaml  t5_wikidata.yaml
configs/benchmark/: gpt2.yaml  llama.yaml  t5.yaml  wikidata.yaml
configs/data/: lc_quad.yaml  lcquad.yaml  mcwq.yaml  qald10.yaml  qawiki.yaml  wikidata.yaml  wikidata_simplequestions.yaml  wikidata_simplequestions_val.yaml
configs/data/datasets/: lcquad_only.yaml  mcwq.yaml  qald10.yaml  qawiki.yaml  wikidata_simplequestions.yaml  wikidata_simplequestions_val.yaml
configs/models/: gpt2.yaml  llama.yaml  t5.yaml
configs/peft/: ia3_llama.yaml  ia3_mistral.yaml  ia3_t5.yaml  lora_llama.yaml  lora_t5.yaml
configs/postprocessings/: clip.yaml
configs/preprocessings/: clean_and_normalize.yaml  sparql_conditional_gen.yaml  sparql_gen.yaml
configs/tokenizers/: bert-uncased.yaml  gpt2.yaml  gpt2_train.yaml  llama.yaml  llama_train.yaml  roberta.yaml  t5.yaml  t5_output.yaml  t5_special.yaml  t5_special_output.yaml
configs/tokenizers/t5/: tokenizer.json
scripts/: build_vector_index.py  create_prefix_vec.sh  evaluate.py  evaluate_simple_questions.py  export_experiment.py  output_to_sparql.py  prepare_data.py  prepare_lc_quad.py  prepare_lcquad.py  prepare_qald10.py  prepare_simple_questions.py  prepare_sparql.py  prepare_vector_index_data.py  prepare_wikidata_query_logs.py  quantize_gptq.py  random_subset.py  run.py  test.sh  test_replacement.py  train.sh
src/deep_sparql/: __init__.py  model.py  utils.py  vector.py
src/deep_sparql/api/: __init__.py  cli.py  generator.py  server.py  train.py
