[project]
name = "deep-sparql"
version = "0.1.0"
description = "Generate SPARQL queries with Deep Learning Models from natural language questions."
authors = [
    { name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = ["nlp", "text", "correction", "spelling"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

dependencies = [
    "text-correction-utils>=0.1.4",
]

[project.scripts]
"deep-sparql" = "deep_sparql.api.cli:main"

[project.urls]
Github = "https://github.com/bastiscode/deep-sparql"
Website= "https://deep-sparql.cs.uni-freiburg.de"

[tool.distutils.bdist_wheel]
universal = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
